--- a/pom.xml
+++ b/pom.xml
@@ -205,7 +205,12 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-
+<dependency>
+             <groupId>mysql</groupId>
+             <artifactId>mysql-connector-java</artifactId>
+     </dependency>
+            <version>5.1.45</version>
+       </dependency>
   <scm>
     <connection>scm:git:git@github.com:jleetutorial/maven-project.git</connection>
     <developerConnection>scm:git:git@github.com:jleetutorial/maven-project.git</developerConnection>
